# TFG_Padel_Recommender

./: .gitignore  pyproject.toml  requirements.txt  todo.txt
config/: config.toml
data/metadata/: quality_report.json
notebooks/: 01_exploracion.ipynb  KPIs_servicio_resultado.xlsx  TFG_Padel_Recommender - Acceso directo.lnk  coordenadas_limpias.xlsx  datos_limpios.xlsx  datos_ordenados.xlsx  kpis_servicio_mejorados.xlsx  limpios_cokiyanguas_ordenados.xlsx  mi_eda.html  mi_eda.qmd  pruebaquarto.html  pruebaquarto.qmd  pruebas.ipynb  resumen_metricas.csv  resumen_partido.xlsx  resumen_set_2.csv
scripts/: pipeline_full.py  pipeline_golpes.py  pipeline_juegos.py
src/common/: logging_setup.py
src/data/: clean_data.py  saque_utils.py
src/tfg_padel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
